--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
   </head>
 <body>
   <header id="header">
-    <nav id="header-nav" class="navbar navbar-default">
+    <nav id="header-nav" class="navbar navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <div class="navbar-brand">
